--- a/public_html/perch/templates/blog/post.html
+++ b/public_html/perch/templates/blog/post.html
@@ -1,13 +1,13 @@
 <div class="post">
     <div class="hentry">
-        <h1><perch:blog id="postTitle" type="text" required="true" size="xl" /></h1>
-        <time datetime="<perch:blog id="postDateTime" format="%Y-%m-%d" />" pubdate class="published"><perch:blog id="postDateTime" format="%d %B %Y" /></time>
-    	<perch:if exists="authorGivenName"><p class="byline">by <perch:blog id="authorGivenName" /> <perch:blog id="authorFamilyName" /></p></perch:if>
+        <h1><perch:blog id="postTitle" type="text" label="Title" required="true" size="xl" order="1" /></h1>
+        <time datetime="<perch:blog id="postDateTime" format="%Y-%m-%d" label="Date" order="2" type="date" />" pubdate class="published"><perch:blog id="postDateTime" format="%d %B %Y" label="Date" type="date" /></time>
+    	<perch:if exists="authorGivenName"><p class="byline">by <perch:blog id="authorGivenName" type="hidden" /> <perch:blog id="authorFamilyName" type="hidden" /></p></perch:if>
 
-        <div class="intro entry-summary"><perch:blog id="excerpt" type="textarea" label="Excerpt" textile="true" order="1" size="s" /></div>
+        <div class="intro entry-summary"><perch:blog id="excerpt" type="textarea" label="Excerpt" textile="true" order="4" size="s" /></div>
         
         <div class="description entry-content">
-        	<perch:blog id="postDescHTML" type="textarea" encode="false" editor="markitup" textile="true" size="xxl" required="true" />
+        	<perch:blog id="postDescHTML" type="textarea" encode="false" editor="markitup" textile="true" size="xxl" required="true" label="Post" order="3" />
         </div>
     </div>
 </div>
