updating to Perch 2.6.5

--- a/public_html/perch/templates/blog/category.html
+++ b/public_html/perch/templates/blog/category.html
@@ -1,2 +1,2 @@
-<perch:blog id="categoryTitle" type="text" /> 
-<perch:blog id="categorySlug" type="slug" for="categoryTitle" />
+<perch:category id="catTitle" type="text" /> 
+<perch:category id="catSlug" type="slug" for="catTitle" />
