--- a/public_html/perch/templates/blog/category_link.html
+++ b/public_html/perch/templates/blog/category_link.html
@@ -2,5 +2,5 @@
 <h3>Categories</h3>
 <ul>
 </perch:before>
-    <li><a href="/blog/category/<perch:blog id="categorySlug" />"><perch:blog id="categoryTitle" /> (<perch:blog id="qty" />)</a></li>
+    <li><a href="/blog/category/<perch:category id="catSlug" />"><perch:category id="catTitle" /> (<perch:category id="count.blog.post" />)</a></li>
 <perch:after></ul></perch:after>
